--- a/IdeaProjects/AnalyzVirusesForAndroid/src/sample/sample.fxml
+++ b/IdeaProjects/AnalyzVirusesForAndroid/src/sample/sample.fxml
@@ -8,7 +8,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 
-
 <TabPane prefHeight="686.0" prefWidth="619.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
    <tabs>
       <Tab text="Главная">
@@ -45,6 +44,17 @@
                <children>
                   <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#saveLogs" text="Собрать логи" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="14.0" />
                   <TextArea fx:id="logsArea" layoutX="14.0" layoutY="56.0" prefHeight="628.0" prefWidth="586.0" AnchorPane.bottomAnchor="19.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="19.0" AnchorPane.topAnchor="56.0" />
+               </children>
+            </AnchorPane>
+        </content>
+      </Tab>
+      <Tab fx:id="decompileTab" onSelectionChanged="#selectDecompile" text="Декомпиляция">
+        <content>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+               <children>
+                  <TreeView fx:id="decompileTree" layoutX="14.0" layoutY="57.0" onMouseClicked="#showDecompileCode" prefHeight="582.0" prefWidth="277.0" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="57.0" />
+                  <TextArea fx:id="decompileCode" layoutX="299.0" layoutY="53.0" prefHeight="586.0" prefWidth="313.0" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="299.0" AnchorPane.rightAnchor="7.0" AnchorPane.topAnchor="57.0" />
+                  <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#showTree" text="Показать файлы" />
                </children>
             </AnchorPane>
         </content>
